--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(antibodyX_server)
 set(CMAKE_CXX_STANDARD 14)
 link_directories(/usr/lib64/mysql/)
 include_directories(include)
+include_directories(/usr/include/mysql)
 
 aux_source_directory(src DIR_SRCS)
 
