更新了一些常见bug和cmakelist.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@ project(antibodyX_server)
 
 
 set(CMAKE_CXX_STANDARD 14)
-link_directories(/usr/lib64/mysql/)
+link_directories(/usr/lib64/mysql)
 include_directories(include)
 include_directories(/usr/include/mysql)
 
 aux_source_directory(src DIR_SRCS)
 
-add_executable(files ${DIR_SRCS})
-target_link_libraries(files mysqlclient)
-target_link_libraries(files pthread)
+add_executable(main ${DIR_SRCS})
+target_link_libraries(main mysqlclient)
+target_link_libraries(main pthread)
